@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
- <!-- EXAMPLE DEFINITION
+ <!-- 
  <javascript cacheable="True"
              compression="safe"
              cookable="True"
@@ -9,8 +9,5 @@
              id="myfancyscript.js"
              inline="False"/>
  -->
-
- <!-- ##code-section jsregistry.xml -->
- <!-- ##/code-section jsregistry.xml -->
 
 </object>
